Overflow and component positioning fixes. + globals.css>body: overflow-x and -y fixed for each viewport ; + Unwanted behaviour fixed: /work>index.infoStyle: applied tailwind grid system so that <Narrative /> width doesn't change whenever the buttons from <SkillsExp /> are pressed ; + Aligned and justified <main> to center on mobile and tablet ;

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,14 +23,14 @@
   justify-content: center;
 }
 @layer base {
-  html, body, #__next {
+  html, body, #__next, .page {
     @apply min-h-screen;
   }
   body {
-    @apply bg-secondary overflow-hidden leading-relaxed;
+    @apply bg-secondary overflow-x-hidden xl:overflow-hidden leading-relaxed;
   }
   .page {
-    @apply overflow-y-auto overflow-x-hidden xl:overflow-hidden min-h-screen;
+    @apply overflow-y-auto overflow-x-hidden xl:overflow-hidden;
   }
   main {
     @apply grow;
